# Forge-Claw-RS

./: .gitignore  AUDIT_REPORT.md  Cargo.toml  FRESH_AUDIT_REPORT.md  LICENSE  README.md  REAUDIT_REPORT.md  pr-body.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.trae/documents/: upgrade-github-actions-to-latest.md
.trae/specs/audit-bugs-and-optimizations/: checklist.md  spec.md  tasks.md
.trae/specs/fresh-multi-angle-audit/: checklist.md  spec.md  tasks.md
.trae/specs/implement-forgeclaw-mvp/: checklist.md  spec.md  tasks.md
.trae/specs/iterative-bug-fix-and-pr/: checklist.md  spec.md  tasks.md
.trae/specs/re-audit-after-fixes/: checklist.md  spec.md  tasks.md
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  config.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  model.rs
crates/core/src/prompt/: engine.rs  mod.rs  profile.rs  section.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  auth.rs  lib.rs  orchestrator.rs  ws.rs
crates/server/tests/: api_test.rs  auth_test.rs  orchestrator_test.rs
crates/tools/: Cargo.toml
crates/tools/src/: file.rs  lib.rs  sandbox.rs  search.rs  shell.rs
crates/tools/tests/: landlock_sandbox.rs
prompts/profiles/: default.toml
prompts/sections/: identity.md  safety.md  style.md  tools.md
web/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/scripts/: visual-check.mjs  visual-check.py
web/src/: App.vue  style.css
web/src/api/: client.ts  types.ts
web/src/router/: index.ts
web/src/stores/: auth.ts  session.ts  settings.ts
web/src/views/: ChatView.vue  HomeView.vue  LoginView.vue  NotFoundView.vue  PromptsView.vue  SessionsView.vue  SettingsView.vue  ToolsView.vue
