[package]
name = "forgeclaw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "forgeclaw-cli"
path = "src/main.rs"

[dependencies]
forgeclaw-core = { workspace = true }
forgeclaw-llm = { workspace = true }
forgeclaw-tools = { workspace = true }
forgeclaw-server = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustyline = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
