[package]
name = "forgeclaw-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
forgeclaw-core = { workspace = true }
tokio = { workspace = true }
libc = "0.2"
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
walkdir = "2.5"
regex = "1.11"

[dev-dependencies]
tempfile = "3.20"
